# LLM-Profiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_executorch.sh
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android2/: .gitignore  settings.gradle
android2/app/: .gitignore  build.gradle
android2/app/release/: output-metadata.json
android2/app/src/main/: AndroidManifest.xml
android2/gradle/: libs.versions.toml
android2/gradle/wrapper/: gradle-wrapper.properties
backupcode/executorch/test/: CMakeLists.txt  test.cpp
backupcode/llama.cpp/examples/main/: test.cpp
configs/: config.json  config_opencl.json
dataset/: CMakeLists.txt  README.md  data_config.json  token-fetcher.py
dataset/data/: data_stats.json
dataset/samples/: sample_stats.json
dataset/samples/RoleBench/: RoleBench.json
dataset/samples/ShareGPT/: ShareGPT.json
docs/: converter.md  executorch.md  llama_cpp.md  mediapipe.md  mlc-llm.md  mllm.md  mnn.md  usage_en.md  usage_zh.md
ios/LLM-Profiler/: .gitignore
ios/LLM-Profiler/LLM-Profiler/: Chat.swift  ContentView.swift  LLM-Profiler-iOS-Bridge.h  LLM.swift  LLM_ProfilerApp.swift
ios/LLM-Profiler/LLM-Profiler.xcodeproj/: project.pbxproj
ios/LLM-Profiler/LLM-Profiler/LLMWrapper/: LLMWrapper.h  LLMWrapper.mm
ios/LLM-Profiler/LLM-ProfilerTests/: LLM_ProfilerTests.swift
ios/LLM-Profiler/LLM-ProfilerUITests/: LLM_ProfilerUITests.swift  LLM_ProfilerUITestsLaunchTests.swift
ios/monitor/: README.md  diagnose.py  monitor.py  profile.py  requirements.txt
model-converter/: converter.ipynb  description.md  executorch.md  llama_cpp.md  mediapipe.ipynb  mnn.md
modify-MNN/: CMakeLists.txt  llm.cpp  llm.hpp  modify.bat  modify.sh
results/: compare-results.csv  merge.py  results.csv
results/mate40pro/: ours-mnn-llama3_2-1b-CPU.csv  ours-mnn-qwen2_5-1_5b-CPU.csv
results/mate40pro/mnn-llama3_2-1b-CPU/: merged.csv
results/mate40pro/mnn-llama3_2-1b-CPU/output/: 20250402_145354.csv  20250402_145450.csv  20250402_145646.csv  20250402_145827.csv  20250402_145951.csv  20250402_150320.csv  20250402_150517.csv  20250402_150811.csv  20250402_151451.csv
results/mate40pro/mnn-qwen2_5-1_5b-CPU/: merged.csv
results/mate40pro/mnn-qwen2_5-1_5b-CPU/output/: 20250402_161104.csv  20250402_161326.csv  20250402_161655.csv  20250402_161953.csv  20250402_162114.csv  20250402_162347.csv  20250402_162628.csv  20250402_163022.csv  20250402_170344.csv
results/mate40pro/ours-llama3_2-1b-CPU/: merged.csv
results/mate40pro/ours-llama3_2-1b-CPU/output/: 20250402_124024.csv  20250402_124154.csv  20250402_124310.csv  20250402_124834.csv  20250402_125057.csv  20250402_125408.csv  20250402_125807.csv  20250402_130154.csv  20250402_130549.csv
results/mate40pro/ours-qwen2_5-1_5b-CPU/: merged.csv
results/mate40pro/ours-qwen2_5-1_5b-CPU/output/: 20250402_173245.csv  20250402_173427.csv  20250402_173633.csv  20250402_173851.csv  20250402_174017.csv  20250402_174245.csv  20250402_174827.csv  20250402_175344.csv  20250402_175556.csv
results/meizu21/: ours-mnn-llama3_2-1b-CPU.csv  ours-mnn-qwen2_5-1_5b-CPU.csv
results/meizu21/mnn-llama3_2-1b-CPU/: merged.csv
results/meizu21/mnn-llama3_2-1b-CPU/output/: 20250402_193213.csv  20250402_193243.csv  20250402_193324.csv  20250402_193440.csv  20250402_193525.csv  20250402_193617.csv  20250402_193717.csv  20250402_193811.csv  20250402_194025.csv
results/meizu21/mnn-qwen2_5-1_5b-CPU/: merged.csv
results/meizu21/mnn-qwen2_5-1_5b-CPU/output/: 20250402_000155.csv  20250402_000314.csv  20250402_000457.csv  20250402_000534.csv  20250402_000832.csv  20250402_001019.csv  20250402_001251.csv  20250402_001400.csv  20250402_001702.csv
results/meizu21/ours-llama3_2-1b-CPU/: merged.csv
results/meizu21/ours-llama3_2-1b-CPU/output/: 20250402_012940.csv  20250402_013002.csv  20250402_013054.csv  20250402_013116.csv  20250402_013157.csv  20250402_013254.csv  20250402_013444.csv  20250402_013517.csv  20250402_013658.csv
results/meizu21/ours-qwen2_5-1_5b-CPU/: merged.csv
results/meizu21/ours-qwen2_5-1_5b-CPU/output/: 20250402_004934.csv  20250402_005002.csv  20250402_005316.csv  20250402_005501.csv  20250402_005557.csv  20250402_005658.csv  20250402_005814.csv  20250402_005919.csv  20250402_010051.csv
results/v30pro/: ours-mnn-llama3_2-1b-CPU.csv  ours-mnn-qwen2_5-1_5b-CPU.csv
results/v30pro/mnn-llama3_2-1b-CPU/: merged.csv
results/v30pro/mnn-llama3_2-1b-CPU/output/: 20250402_153140.csv  20250402_153308.csv  20250402_153438.csv  20250402_153922.csv  20250402_153958.csv  20250402_154208.csv  20250402_160817.csv  20250402_160935.csv  20250402_161146.csv
results/v30pro/mnn-qwen2_5-1_5b-CPU/: merged.csv
results/v30pro/mnn-qwen2_5-1_5b-CPU/output/: 20250402_000158.csv  20250402_000317.csv  20250402_000505.csv  20250402_000536.csv  20250402_000902.csv  20250402_001029.csv  20250402_001309.csv  20250402_001416.csv  20250402_001723.csv
results/v30pro/ours-llama3_2-1b-CPU/: merged.csv
results/v30pro/ours-llama3_2-1b-CPU/output/: 20250401_234941.csv  20250401_235022.csv  20250401_235108.csv  20250401_235145.csv  20250401_235241.csv  20250401_235340.csv  20250401_235429.csv  20250401_235517.csv  20250401_235631.csv
results/v30pro/ours-qwen2_5-1_5b-CPU/: merged.csv
results/v30pro/ours-qwen2_5-1_5b-CPU/output/: 20250402_004850.csv  20250402_005008.csv  20250402_005328.csv  20250402_005505.csv  20250402_005606.csv  20250402_005711.csv  20250402_005835.csv  (+2 more)
results/xiaomi15pro/: ours-mnn-llama3_2-1b-CPU.csv  ours-mnn-qwen2_5-1_5b-CPU.csv
results/xiaomi15pro/mnn-llama3_2-1b-CPU/: merged.csv
results/xiaomi15pro/mnn-qwen2_5-1_5b-CPU/: merged.csv
results/xiaomi15pro/ours-llama3_2-1b-CPU/: merged.csv
results/xiaomi15pro/ours-qwen2_5-1_5b-CPU/: merged.csv
wrapper/: CMakeLists.txt
wrapper/include/: et_wrapper.h  llama_cpp_wrapper.h  llm_wrapper.h  mllm_wrapper.h  mnn_wrapper.h
wrapper/lib/: CMakeLists.txt  et_wrapper.cpp
wrapper/src/: llama_cpp_wrapper.cpp  mllm_wrapper.cpp  mnn_wrapper.cpp
(+76 files in other folders)
